infrastructure/networking/gateways/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-internal
  namespace: gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.basilaslam.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.basilaslam.com"
      tls:
        certificateRefs:
          - name: cert-basilaslam
            kind: Secret
            group: ""
      allowedRoutes:
        namespaces:
          from: All
